--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
           <!--  <h1 class="m-0  text-primary"></i>WIDZEES Consulting Services</h1> -->
-            <img src="img/logo_widzees.jpg" alt="Widzees Consulting Services" width="950" height="222">
+            <img src="img/Logo_widzees.jpg" alt="Widzees Consulting Services" width="950" height="222">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
