--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,9 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-primary"></i>Widzees Consulting Services</h1>
-        </a>
+            <!--  <h1 class="m-0  text-primary"></i>WIDZEES Consulting Services</h1> -->
+              <img src="img/Logo_widzees.jpg" alt="Widzees Consulting Services" width="400" height="100">
+          </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
