--- a/service.html
+++ b/service.html
@@ -114,7 +114,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-user-tie fa-2x"></i>
+                        <i class="fa fa-cloud fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Cloud Solutions : Microsoft 365</h3>
                     <p class="mb-0"></p>
@@ -123,7 +123,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-chart-pie fa-2x"></i>
+                        <i class="fa fa-building fa-2x"></i>
                     </div>
                     <h3 class="mb-3">ON-Premise Solutions</h3>
                     <p class="mb-0"></p>
@@ -132,7 +132,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-chart-line fa-2x"></i>
+                        <i class="fa fa-cloud fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Hybrid Solutions</h3>
                     <p class="mb-0"></p>
