--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Contact Us</h1>
                 <div class="col-lg-auto col-md-6 text-center">
-                    <p class="mb-0 text-white"><i class="bi bi-geo-alt text-primary text-center me-2"></i>17 Rue Ibn Khalikane Palmier, Casablanca, Morocco</p>
+                    <p class="mb-0 text-white"><i class="bi bi-geo-alt text-primary text-center me-2"></i>12, Rue Saria Ben Zounaim étage 3 Appt 3 Palmier, Casablanca, Morocco</p>
                     <p class="mb-0 text-white"><i class="bi bi-envelope-open text-primary text-center me-2"></i>contact@widzees.com</p>
                     <p class="mb-0 text-white"><i class="bi bi-telephone text-primary text-center me-2"></i>+212 665 8866550</p>
                 </div>
@@ -159,7 +159,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>17 Rue Ibn Khalikane Palmier, Casablanca, Morocco</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>12, Rue Saria Ben Zounaim étage 3 Appt 3 Palmier, Casablanca, Morocco</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@widzees.com</p>
                 <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 8866550</p>
             </div>
