--- a/service.html
+++ b/service.html
@@ -195,7 +195,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>12, Rue Saria Ben Zounaim étage 3 Appt 3 Palmier, Casablanca, Morocco</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>12, Rue Saria Ben Zounaim étage 3 Appt 3 Palmier, Casablanca 20340, Morocco</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@widzees.com</p>
                 <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 8866550</p>
             </div>
