--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                 <div class="col-lg-auto col-md-6 text-center">
                     <p class="mb-0 text-white"><i class="bi bi-geo-alt text-primary text-center me-2"></i>12, Rue Saria Ben Zounaim étage 3 Appt 3 Palmier, Casablanca 20340, Morocco</p>
                     <p class="mb-0 text-white"><i class="bi bi-envelope-open text-primary text-center me-2"></i>contact@widzees.com</p>
-                    <p class="mb-0 text-white"><i class="bi bi-telephone text-primary text-center me-2"></i>+212 665 8866550</p>
+                    <p class="mb-0 text-white"><i class="bi bi-telephone text-primary text-center me-2"></i>+212 665 886655</p>
                 </div>
             </div>
         </div>
@@ -161,7 +161,7 @@
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>12, Rue Saria Ben Zounaim étage 3 Appt 3 Palmier, Casablanca 20340, Morocco</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@widzees.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 8866550</p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 886655</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
