--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Contact Us</h1>
                 <div class="col-lg-auto col-md-6 text-center">
-                    <p class="mb-0 text-white"><i class="bi bi-geo-alt text-primary text-center me-2"></i>12, Rue Saria Ben Zounaim étage 3 Appt 3 Palmier, Casablanca 20340, Morocco</p>
+                    <p class="mb-0 text-white"><i class="bi bi-geo-alt text-primary text-center me-2"></i>11 Avenue 2 Mars, Immeuble Best Center, 3ème étage - N° 9, Casablanca 20490, Morocco</p>
                     <p class="mb-0 text-white"><i class="bi bi-envelope-open text-primary text-center me-2"></i>contact@widzees.com</p>
                     <p class="mb-0 text-white"><i class="bi bi-telephone text-primary text-center me-2"></i>+212 665 88.66.55</p>
                 </div>
@@ -112,7 +112,7 @@
             <div class="col-lg-12" style="min-height: 800px;">
                 <div class="position-relative h-100">
                     <iframe class="position-relative w-100 h-100"
-                        src="https://www.city-info.ma/casablanca/fr/build/2836005345/551/20233/-15213/8/3/"
+                        src="https://www.waze.com/fr/live-map/directions/ma/casablanca-settat/casablanca/11-av.-2-mars?to=place.ChIJ85R0pqHSpw0R7oWB0YmAN2s"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
@@ -159,7 +159,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>12, Rue Saria Ben Zounaim étage 3 Appt 3 Palmier, Casablanca 20340, Morocco</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>11 Avenue 2 Mars, Immeuble Best Center, 3ème étage - N° 9, Casablanca 20490, Morocco</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@widzees.com</p>
                 <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 88.66.55</p>
             </div>
