--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
             <div class="col-lg-12" style="min-height: 800px;">
                 <div class="position-relative h-100">
                     <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed/v1/place?key=API_KEY&q=Widzees+Consulting+Services"
+                        src="https://www.city-info.ma/casablanca/fr/org/1258924637/34708/20480/-15808/5/3/"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
