--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
           </a>
           <a href="index.html" class="navbar-brand p-0">
             <!--  <h1 class="m-0  text-primary"></i>WIDZEES Consulting Services</h1> -->
-              <img src="img/MicrosoftPartner_Medium.png" alt="Widzees Consulting Services" width="400" height="100">
+              <img src="img/MicrosoftPartner_Medium.jpg" alt="Logo Partner" width="200" height="50">
           </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
