--- a/service.html
+++ b/service.html
@@ -120,7 +120,10 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-cloud fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Cloud Solutions : Microsoft 365</h3>
+                    <h3 class="mb-3">Cloud Solutions </h3>
+                    <h3 class="mb-3">Microsoft 365 & Copilot</h3>
+                    <h3 class="mb-3">Microsoft Azure</h3>
+                    <h3 class="mb-3">M365 and Azure Subscriptions</h3>
                     <p class="mb-0"></p>
                 </div>
             </div>
