--- a/service.html
+++ b/service.html
@@ -120,10 +120,11 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-cloud fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Cloud Solutions </h3>
-                    <h3 class="mb-3">Microsoft 365 & Copilot</h3>
+                    <h3 class="mb-3">Cloud Solutions: </h3>
+                    <h3 class="mb-3">Microsoft 365 & Copilot,</h3>
                     <h3 class="mb-3">Microsoft Azure</h3>
                     <h3 class="mb-3">M365 and Azure Subscriptions</h3>
+                    <h3 class="mb-3">Souscriptions M365 & Azure</h3>
                     <p class="mb-0"></p>
                 </div>
             </div>
@@ -132,7 +133,10 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-building fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">ON-Premise Solutions</h3>
+                    <h3 class="mb-3">ON-Premise Solutions:</h3>
+                    <h3 class="mb-3">Microsoft Solutions ,</h3>
+                    <h3 class="mb-3">Microsoft Licenses ,</h3>
+                    <h3 class="mb-3">Licenses Microsoft</h3>
                     <p class="mb-0"></p>
                 </div>
             </div>
@@ -141,7 +145,9 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa- fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Hybrid Solutions</h3>
+                    <h3 class="mb-3">Microsoft Hybrid Solutions:</h3>
+                    <h3 class="mb-3">Office 365 in Hybrid mode,</h3>
+                    <h3 class="mb-3">Azure in Hybrid mode,</h3>
                     <p class="mb-0"></p>
                 </div>
             </div>
