--- a/Cloud-Microsoft-Maroc-Office-365-Azure-licenses-consulting.html
+++ b/Cloud-Microsoft-Maroc-Office-365-Azure-licenses-consulting.html
@@ -75,7 +75,7 @@
             <div class="navbar-nav ms-auto py-0 me-n3">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="Cloud-Microsoft-Maroc-Office-365-Azure-licenses-consulting.html" class="nav-item nav-link active">Service</a>
+                <a href="service.html" class="nav-item nav-link active">Service</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
@@ -121,7 +121,7 @@
                         <i class="fa fa-cloud fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Cloud Solutions: </h3>
-                    <h3 class="mb-3">Office 365 , Azure</h3>
+                    <h3 class="mb-3">Office 365 Copilot, Azure</h3>
                     <h3 class="mb-3">M365 and Azure Subscriptions</h3>
                     <h3 class="mb-3">Souscriptions M365 & Azure</h3>
                     <p class="mb-0"></p>
@@ -190,7 +190,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
                     <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="Cloud-Microsoft-Maroc-Office-365-Azure-licenses-consulting.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
                     <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog Post</a>
                     <a class="text-secondary" href="contact"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
@@ -200,7 +200,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
                     <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="Cloud-Microsoft-Maroc-Office-365-Azure-licenses-consulting.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
                     <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog Post</a>
                     <a class="text-secondary" href="contact"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
