--- a/detail.html
+++ b/detail.html
@@ -69,7 +69,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 me-n3">
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="widzees.html" class="nav-item nav-link">About</a>
+                <a href="Widzees.html" class="nav-item nav-link">About</a>
                 <a href="Cloud-Microsoft-Maroc-Office-365-Azure-licenses-consulting-Partenaire.html" class="nav-item nav-link">Service</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
