--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">IT Technology Consultancy</h5>
-                            <h1 class="display-1 text-white mb-md-4">We Provide Solution On Your Business V7.4</h1>
+                            <h1 class="display-1 text-white mb-md-4">We Provide Solution On Your Business <V7.2></V7.2></h1>
                             <a href="widzees.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">About Us</a>
                             <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
